# deepseek-tui

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  config.example.toml  launch.bat  launch.ps1
.claude/: HANDOFF_v0.8.27_user_issues.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-close-harvested.yml  ci.yml  parity.yml  release.yml
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: lib.rs  main.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/execpolicy/src/: lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs
crates/mcp/: Cargo.toml
crates/secrets/src/: lib.rs
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml  build.rs
crates/tui/src/: artifacts.rs  auto_reasoning.rs  child_env.rs  client.rs  config.rs  cycle_manager.rs  deepseek_theme.rs  dependencies.rs  error_taxonomy.rs  features.rs  handoff.rs  localization.rs  main.rs  mcp.rs  memory.rs  network_policy.rs  utils.rs  (+9 more)
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONFIG_TEAM.md  DOCKER.md  FEISHU_LIGHTHOUSE_V0_8_37_PLAN.md  INSTALL.md  RELEASE_CHECKLIST.md  TEAM_GUIDE.md  TENCENT_LIGHTHOUSE_HANDOFF_PROMPT.md  TENCENT_LIGHTHOUSE_HK.md  TOOL_SURFACE.md
npm/deepseek-tui/: README.md  package.json
scripts/tencent-lighthouse/: bootstrap-ubuntu.sh
skills/handoff/: SKILL.md
skills/session-recovery/: SKILL.md
skills/session-saver/: SKILL.md
skills/team-workflow/: SKILL.md
web/: middleware.ts  next.config.ts  package-lock.json  package.json  wrangler.jsonc
web/app/: globals.css
web/lib/: community-agent-tasks.ts  community-agent.ts  content-watch.ts  deepseek.ts  facts.generated.ts  kv.ts
website/: index.html
website/zh/: index.html
(+113 files in other folders)
